# intent-db

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  REFERENCES.md  RESEARCH.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  RESULTS.md  __init__.py  dataset.py  dataset_hard.py  harness.py  metrics.py  run.py
examples/: AGENT_MEMORY.md  __init__.py  agent_memory.py  demo.py
src/intentdb/: __init__.py  chunking.py  cli.py  db.py  embedders.py  fusion.py  intent.py  lexical.py  mcp_server.py  mining.py  rerank.py  store.py
tests/: test_agent_memory.py  test_bench.py  test_chunking.py  test_cli.py  test_db.py  test_embedders.py  test_feedback.py  test_instructions.py  test_intent.py  test_lexical.py  test_mcp_server.py  test_mining.py  test_rerank.py  test_whitening_prf.py
